--- a/Results/Review/Table6B.tex
+++ b/Results/Review/Table6B.tex
@@ -5,131 +5,131 @@
             &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
             &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-efw\_colonizer&       0.718\sym{***}&       0.446\sym{**} &       0.780\sym{**} &       0.698\sym{***}&       0.811\sym{**} &       1.344\sym{***}\\
-            &     (0.134)         &     (0.146)         &     (0.218)         &     (0.125)         &     (0.232)         &     (0.217)         \\
+efw\_colonizer&       0.718\sym{***}&       0.446\sym{**} &       1.442\sym{**} &       0.698\sym{***}&       0.448\sym{**} &       1.344\sym{***}\\
+            &     (0.134)         &     (0.146)         &     (0.440)         &     (0.125)         &     (0.153)         &     (0.217)         \\
 [1em]
-share\_euro  &     0.00239         &   -0.000394         &     -0.0128         &      -0.206\sym{***}&       0.297         &      -1.344\sym{**} \\
-            &   (0.00132)         &   (0.00263)         &   (0.00640)         &    (0.0560)         &     (0.367)         &     (0.466)         \\
+share\_euro  &     0.00239         &   -0.000394         &     -0.0159         &      -0.206\sym{***}&      0.0596         &      -1.344\sym{**} \\
+            &   (0.00132)         &   (0.00263)         &   (0.00819)         &    (0.0560)         &     (0.181)         &     (0.466)         \\
 [1em]
-america     &                     &      -0.358         &     0.00255         &                     &      -0.319\sym{**} &       0.212         \\
-            &                     &     (0.241)         &     (0.656)         &                     &    (0.0760)         &     (0.499)         \\
+america     &                     &      -0.358         &       0.462         &                     &      -0.432\sym{**} &       0.212         \\
+            &                     &     (0.241)         &     (0.909)         &                     &     (0.131)         &     (0.499)         \\
 [1em]
-africa      &                     &      -0.635         &      -0.207         &                     &     -0.0558         &     -0.0697         \\
-            &                     &     (0.472)         &     (1.047)         &                     &     (0.627)         &     (0.452)         \\
+africa      &                     &      -0.635         &       0.538         &                     &      -0.694\sym{*}  &     -0.0697         \\
+            &                     &     (0.472)         &     (1.370)         &                     &     (0.318)         &     (0.452)         \\
 [1em]
-asia        &                     &      -0.307         &      -0.190         &                     &      -0.372\sym{*}  &       0.280         \\
-            &                     &     (0.312)         &     (0.962)         &                     &     (0.157)         &     (0.451)         \\
+asia        &                     &      -0.307         &       0.276         &                     &      -0.387         &       0.280         \\
+            &                     &     (0.312)         &     (1.030)         &                     &     (0.206)         &     (0.451)         \\
 [1em]
-lat\_abst    &                     &       0.560         &      -4.893\sym{***}&                     &       0.701         &      -4.064         \\
-            &                     &     (0.810)         &     (0.452)         &                     &     (0.800)         &     (2.886)         \\
+lat\_abst    &                     &       0.560         &      -3.295\sym{*}  &                     &       0.539         &      -4.064         \\
+            &                     &     (0.810)         &     (1.355)         &                     &     (0.858)         &     (2.886)         \\
 [1em]
-landlock    &                     &       0.192         &       0.900\sym{**} &                     &       0.147         &       1.437\sym{***}\\
-            &                     &     (0.352)         &     (0.288)         &                     &     (0.310)         &     (0.235)         \\
+landlock    &                     &       0.192         &       1.312\sym{**} &                     &       0.186         &       1.437\sym{***}\\
+            &                     &     (0.352)         &     (0.290)         &                     &     (0.339)         &     (0.235)         \\
 [1em]
-island      &                     &       0.806\sym{**} &       1.094\sym{*}  &                     &       0.930\sym{*}  &       1.229\sym{**} \\
-            &                     &     (0.291)         &     (0.406)         &                     &     (0.409)         &     (0.423)         \\
+island      &                     &       0.806\sym{**} &       1.273\sym{**} &                     &       0.807\sym{**} &       1.229\sym{**} \\
+            &                     &     (0.291)         &     (0.447)         &                     &     (0.301)         &     (0.423)         \\
 [1em]
-ruggedness  &                     &    0.000561         &    -0.00105         &                     &     0.00252\sym{*}  &    -0.00380\sym{***}\\
-            &                     &   (0.00151)         &   (0.00181)         &                     &   (0.00104)         &  (0.000608)         \\
+ruggedness  &                     &    0.000561         &    -0.00253         &                     &    0.000563         &    -0.00380\sym{***}\\
+            &                     &   (0.00151)         &   (0.00183)         &                     &   (0.00152)         &  (0.000608)         \\
 [1em]
-lpd1500s    &                     &      -0.174\sym{**} &      0.0256         &                     &      -0.245         &       0.230\sym{***}\\
-            &                     &    (0.0534)         &     (0.157)         &                     &     (0.162)         &    (0.0453)         \\
+lpd1500s    &                     &      -0.174\sym{**} &       0.111         &                     &      -0.179\sym{**} &       0.230\sym{***}\\
+            &                     &    (0.0534)         &     (0.140)         &                     &    (0.0665)         &    (0.0453)         \\
 [1em]
-logem4      &                     &                     &      -0.268\sym{**} &                     &    0.000330         &      -0.458\sym{***}\\
-            &                     &                     &    (0.0844)         &                     &    (0.0232)         &    (0.0992)         \\
+logem4      &                     &                     &      -0.481\sym{**} &                     &                     &      -0.458\sym{***}\\
+            &                     &                     &     (0.167)         &                     &                     &    (0.0992)         \\
 [1em]
-humid1      &                     &                     &    -0.00764         &                     &                     &     -0.0128         \\
-            &                     &                     &    (0.0269)         &                     &                     &    (0.0196)         \\
+humid1      &                     &                     &    -0.00777         &                     &                     &     -0.0128         \\
+            &                     &                     &    (0.0285)         &                     &                     &    (0.0196)         \\
 [1em]
-humid2      &                     &                     &      0.0387         &                     &                     &      0.0597\sym{**} \\
-            &                     &                     &    (0.0293)         &                     &                     &    (0.0183)         \\
+humid2      &                     &                     &      0.0488         &                     &                     &      0.0597\sym{**} \\
+            &                     &                     &    (0.0280)         &                     &                     &    (0.0183)         \\
 [1em]
-humid3      &                     &                     &      0.0329         &                     &                     &      0.0525\sym{**} \\
-            &                     &                     &    (0.0232)         &                     &                     &    (0.0149)         \\
+humid3      &                     &                     &      0.0408         &                     &                     &      0.0525\sym{**} \\
+            &                     &                     &    (0.0253)         &                     &                     &    (0.0149)         \\
 [1em]
-humid4      &                     &                     &      0.0262         &                     &                     &      0.0462         \\
-            &                     &                     &    (0.0229)         &                     &                     &    (0.0257)         \\
+humid4      &                     &                     &      0.0435         &                     &                     &      0.0462         \\
+            &                     &                     &    (0.0307)         &                     &                     &    (0.0257)         \\
 [1em]
-temp1       &                     &                     &      -0.326\sym{**} &                     &                     &      -0.421\sym{*}  \\
-            &                     &                     &     (0.115)         &                     &                     &     (0.184)         \\
+temp1       &                     &                     &      -0.415\sym{**} &                     &                     &      -0.421\sym{*}  \\
+            &                     &                     &     (0.118)         &                     &                     &     (0.184)         \\
 [1em]
-temp2       &                     &                     &     -0.0652         &                     &                     &     -0.0161         \\
-            &                     &                     &    (0.0476)         &                     &                     &    (0.0373)         \\
+temp2       &                     &                     &     -0.0288         &                     &                     &     -0.0161         \\
+            &                     &                     &    (0.0435)         &                     &                     &    (0.0373)         \\
 [1em]
-temp3       &                     &                     &       0.238\sym{***}&                     &                     &       0.283\sym{**} \\
-            &                     &                     &    (0.0385)         &                     &                     &    (0.0903)         \\
+temp3       &                     &                     &       0.279\sym{***}&                     &                     &       0.283\sym{**} \\
+            &                     &                     &    (0.0300)         &                     &                     &    (0.0903)         \\
 [1em]
-temp4       &                     &                     &    -0.00439         &                     &                     &     -0.0303         \\
-            &                     &                     &    (0.0226)         &                     &                     &    (0.0184)         \\
+temp4       &                     &                     &     0.00458         &                     &                     &     -0.0303         \\
+            &                     &                     &    (0.0295)         &                     &                     &    (0.0184)         \\
 [1em]
-temp5       &                     &                     &       0.111\sym{*}  &                     &                     &       0.162\sym{**} \\
-            &                     &                     &    (0.0508)         &                     &                     &    (0.0479)         \\
+temp5       &                     &                     &       0.155\sym{*}  &                     &                     &       0.162\sym{**} \\
+            &                     &                     &    (0.0576)         &                     &                     &    (0.0479)         \\
 [1em]
-steplow     &                     &                     &     -0.0305         &                     &                     &       0.203         \\
-            &                     &                     &     (0.213)         &                     &                     &     (0.139)         \\
+steplow     &                     &                     &       0.174         &                     &                     &       0.203         \\
+            &                     &                     &     (0.124)         &                     &                     &     (0.139)         \\
 [1em]
-deslow      &                     &                     &      0.0631         &                     &                     &       0.531         \\
-            &                     &                     &     (0.318)         &                     &                     &     (0.449)         \\
+deslow      &                     &                     &       0.433         &                     &                     &       0.531         \\
+            &                     &                     &     (0.380)         &                     &                     &     (0.449)         \\
 [1em]
-stepmid     &                     &                     &           0         &                     &                     &      -0.945         \\
-            &                     &                     &         (.)         &                     &                     &     (1.736)         \\
+stepmid     &                     &                     &      -4.203         &                     &                     &      -0.945         \\
+            &                     &                     &     (2.563)         &                     &                     &     (1.736)         \\
 [1em]
 desmid      &                     &                     &           0         &                     &                     &           0         \\
             &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-drystep     &                     &                     &     -0.0698         &                     &                     &     -0.0907         \\
-            &                     &                     &    (0.0328)         &                     &                     &    (0.0617)         \\
+drystep     &                     &                     &     -0.0465         &                     &                     &     -0.0907         \\
+            &                     &                     &    (0.0729)         &                     &                     &    (0.0617)         \\
 [1em]
 hiland      &                     &                     &           0         &                     &                     &           0         \\
             &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-drywint     &                     &                     &           0         &                     &                     &       7.608         \\
-            &                     &                     &         (.)         &                     &                     &     (30.30)         \\
+drywint     &                     &                     &      -38.55         &                     &                     &       7.608         \\
+            &                     &                     &     (21.94)         &                     &                     &     (30.30)         \\
 [1em]
-goldm       &                     &                     &    -0.00242         &                     &                     &      -0.185         \\
-            &                     &                     &    (0.0219)         &                     &                     &     (0.662)         \\
+goldm       &                     &                     &       0.819         &                     &                     &      -0.185         \\
+            &                     &                     &     (0.486)         &                     &                     &     (0.662)         \\
 [1em]
-iron        &                     &                     &      0.0556         &                     &                     &      -0.262\sym{***}\\
-            &                     &                     &     (0.192)         &                     &                     &    (0.0352)         \\
+iron        &                     &                     &      -0.190\sym{**} &                     &                     &      -0.262\sym{***}\\
+            &                     &                     &    (0.0455)         &                     &                     &    (0.0352)         \\
 [1em]
-silv        &                     &                     &      0.0216         &                     &                     &           0         \\
-            &                     &                     &     (0.182)         &                     &                     &         (.)         \\
+silv        &                     &                     &           0         &                     &                     &           0         \\
+            &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-zinc        &                     &                     &      -0.158         &                     &                     &           0         \\
-            &                     &                     &     (0.109)         &                     &                     &         (.)         \\
+zinc        &                     &                     &           0         &                     &                     &           0         \\
+            &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-oilres      &                     &                     & -0.00000133         &                     &                     & -0.00000105         \\
-            &                     &                     &(0.000000772)         &                     &                     &(0.000000710)         \\
+oilres      &                     &                     &-0.000000908         &                     &                     & -0.00000105         \\
+            &                     &                     &(0.000000514)         &                     &                     &(0.000000710)         \\
 [1em]
-legor\_fr    &                     &                     &       1.192         &                     &                     &       1.380         \\
-            &                     &                     &     (0.866)         &                     &                     &     (0.699)         \\
+legor\_fr    &                     &                     &       1.065         &                     &                     &       1.380         \\
+            &                     &                     &     (0.768)         &                     &                     &     (0.699)         \\
 [1em]
-legor\_uk    &                     &                     &       1.690\sym{*}  &                     &                     &       2.725\sym{***}\\
-            &                     &                     &     (0.768)         &                     &                     &     (0.421)         \\
+legor\_uk    &                     &                     &       2.354\sym{**} &                     &                     &       2.725\sym{***}\\
+            &                     &                     &     (0.670)         &                     &                     &     (0.421)         \\
 [1em]
-c.efw\_colonizer#c.share\_euro&                     &                     &                     &      0.0263\sym{***}&     -0.0371         &       0.167\sym{**} \\
-            &                     &                     &                     &   (0.00712)         &    (0.0456)         &    (0.0590)         \\
+2.colonizer &                     &                     &           0         &                     &                     &           0         \\
+            &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-2.colonizer &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &         (.)         \\
+3.colonizer &                     &                     &       0.993\sym{**} &                     &                     &       0.998\sym{*}  \\
+            &                     &                     &     (0.314)         &                     &                     &     (0.428)         \\
 [1em]
-3.colonizer &                     &                     &                     &                     &                     &       0.998\sym{*}  \\
-            &                     &                     &                     &                     &                     &     (0.428)         \\
+4.colonizer &                     &                     &       1.602\sym{***}&                     &                     &       1.751\sym{***}\\
+            &                     &                     &     (0.168)         &                     &                     &     (0.169)         \\
 [1em]
-4.colonizer &                     &                     &                     &                     &                     &       1.751\sym{***}\\
-            &                     &                     &                     &                     &                     &     (0.169)         \\
+6.colonizer &                     &                     &       1.139\sym{*}  &                     &                     &       0.658         \\
+            &                     &                     &     (0.531)         &                     &                     &     (0.798)         \\
 [1em]
-6.colonizer &                     &                     &                     &                     &                     &       0.658         \\
-            &                     &                     &                     &                     &                     &     (0.798)         \\
+7.colonizer &                     &                     &       1.422\sym{*}  &                     &                     &       1.435\sym{*}  \\
+            &                     &                     &     (0.543)         &                     &                     &     (0.525)         \\
 [1em]
-7.colonizer &                     &                     &                     &                     &                     &       1.435\sym{*}  \\
-            &                     &                     &                     &                     &                     &     (0.525)         \\
+c.efw\_colonizer#c.share\_euro&                     &                     &                     &      0.0263\sym{***}&    -0.00753         &       0.167\sym{**} \\
+            &                     &                     &                     &   (0.00712)         &    (0.0224)         &    (0.0590)         \\
 [1em]
-\_cons      &       0.932         &       3.196\sym{*}  &      -6.253         &       1.087         &     -0.0462         &      -16.68\sym{***}\\
-            &     (0.997)         &     (1.326)         &     (4.262)         &     (0.940)         &     (2.065)         &     (3.009)         \\
+\_cons      &       0.932         &       3.196\sym{*}  &      -15.96\sym{**} &       1.087         &       3.251\sym{**} &      -16.68\sym{***}\\
+            &     (0.997)         &     (1.326)         &     (4.167)         &     (0.940)         &     (1.248)         &     (3.009)         \\
 \hline
-\(N\)       &          86         &          66         &          53         &          86         &          53         &          53         \\
-\(R^{2}\)   &       0.170         &       0.525         &       0.842         &       0.180         &       0.597         &       0.893         \\
+\(N\)       &          86         &          66         &          53         &          86         &          66         &          53         \\
+\(R^{2}\)   &       0.170         &       0.525         &       0.880         &       0.180         &       0.525         &       0.893         \\
 \hline\hline
 \multicolumn{7}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{7}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
