--- a/Results/Review/Table6C.tex
+++ b/Results/Review/Table6C.tex
@@ -5,92 +5,92 @@
             &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
             &\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}&\multicolumn{1}{c}{avg\_efw}\\
 \hline
-efw\_colonizer&       0.648\sym{***}&       0.762\sym{***}&       1.299\sym{**} &       0.615\sym{***}&       0.427\sym{**} &       0.549\sym{**} \\
-            &     (0.124)         &     (0.143)         &     (0.432)         &     (0.114)         &     (0.141)         &     (0.186)         \\
+efw\_colonizer&       0.648\sym{***}&       0.443\sym{**} &       1.299\sym{**} &       0.615\sym{***}&       0.427\sym{**} &       1.067\sym{***}\\
+            &     (0.124)         &     (0.141)         &     (0.432)         &     (0.114)         &     (0.141)         &     (0.227)         \\
 [1em]
-share\_euro2 &     0.00501\sym{**} &    0.000918         &     -0.0158         &      -0.277\sym{***}&      -0.214         &      -1.107\sym{*}  \\
-            &   (0.00148)         &   (0.00442)         &   (0.00861)         &    (0.0311)         &     (0.226)         &     (0.401)         \\
+share\_euro2 &     0.00501\sym{**} &  -0.0000870         &     -0.0158         &      -0.277\sym{***}&      -0.214         &      -1.433\sym{**} \\
+            &   (0.00148)         &   (0.00380)         &   (0.00861)         &    (0.0311)         &     (0.226)         &     (0.470)         \\
 [1em]
-america     &                     &     -0.0291         &      -0.998         &                     &       0.279         &       2.337         \\
-            &                     &     (0.463)         &     (1.317)         &                     &     (0.973)         &     (1.401)         \\
+america     &                     &      -0.358         &      -0.998         &                     &       0.279         &       3.369         \\
+            &                     &     (0.387)         &     (1.317)         &                     &     (0.973)         &     (2.087)         \\
 [1em]
-africa      &                     &      0.0563         &      -0.992         &                     &     -0.0249         &       1.835         \\
-            &                     &     (0.854)         &     (1.813)         &                     &     (1.105)         &     (1.501)         \\
+africa      &                     &      -0.629         &      -0.992         &                     &     -0.0249         &       2.894         \\
+            &                     &     (0.664)         &     (1.813)         &                     &     (1.105)         &     (2.164)         \\
 [1em]
-asia        &                     &     -0.0689         &      -1.289         &                     &       0.345         &       2.244         \\
-            &                     &     (0.637)         &     (1.225)         &                     &     (0.994)         &     (1.455)         \\
+asia        &                     &      -0.311         &      -1.289         &                     &       0.345         &       3.267         \\
+            &                     &     (0.440)         &     (1.225)         &                     &     (0.994)         &     (1.971)         \\
 [1em]
-lat\_abst    &                     &       0.787         &      -3.114\sym{**} &                     &       0.503         &      -4.817\sym{***}\\
-            &                     &     (0.781)         &     (0.966)         &                     &     (0.996)         &     (0.654)         \\
+lat\_abst    &                     &       0.538         &      -3.114\sym{**} &                     &       0.503         &      -3.848         \\
+            &                     &     (0.917)         &     (0.966)         &                     &     (0.996)         &     (1.985)         \\
 [1em]
-landlock    &                     &       0.162         &       1.274\sym{**} &                     &       0.219         &       1.005\sym{**} \\
-            &                     &     (0.311)         &     (0.287)         &                     &     (0.374)         &     (0.306)         \\
+landlock    &                     &       0.193         &       1.274\sym{**} &                     &       0.219         &       1.387\sym{***}\\
+            &                     &     (0.351)         &     (0.287)         &                     &     (0.374)         &     (0.236)         \\
 [1em]
-island      &                     &       0.887\sym{*}  &       1.314\sym{**} &                     &       0.823\sym{**} &       1.087\sym{**} \\
-            &                     &     (0.327)         &     (0.378)         &                     &     (0.292)         &     (0.390)         \\
+island      &                     &       0.810\sym{**} &       1.314\sym{**} &                     &       0.823\sym{**} &       1.285\sym{**} \\
+            &                     &     (0.290)         &     (0.378)         &                     &     (0.292)         &     (0.311)         \\
 [1em]
-ruggedness  &                     &     0.00232         &    -0.00248         &                     &    0.000525         &    -0.00221         \\
-            &                     &   (0.00116)         &   (0.00193)         &                     &   (0.00149)         &   (0.00175)         \\
+ruggedness  &                     &    0.000576         &    -0.00248         &                     &    0.000525         &    -0.00398\sym{***}\\
+            &                     &   (0.00146)         &   (0.00193)         &                     &   (0.00149)         &  (0.000720)         \\
 [1em]
-logem4      &                     &      0.0221         &      -0.454\sym{**} &                     &                     &      -0.246\sym{*}  \\
-            &                     &    (0.0566)         &     (0.146)         &                     &                     &     (0.101)         \\
+lpd1500s    &                     &      -0.174\sym{**} &      0.0897         &                     &      -0.162\sym{**} &       0.206\sym{*}  \\
+            &                     &    (0.0570)         &     (0.151)         &                     &    (0.0508)         &    (0.0898)         \\
 [1em]
-lpd1500s    &                     &      -0.206         &      0.0897         &                     &      -0.162\sym{**} &       0.102         \\
-            &                     &     (0.109)         &     (0.151)         &                     &    (0.0508)         &     (0.149)         \\
+logem4      &                     &                     &      -0.454\sym{**} &                     &                     &      -0.414\sym{***}\\
+            &                     &                     &     (0.146)         &                     &                     &    (0.0650)         \\
 [1em]
-humid1      &                     &                     &    -0.00281         &                     &                     &    -0.00694         \\
-            &                     &                     &    (0.0346)         &                     &                     &    (0.0266)         \\
+humid1      &                     &                     &    -0.00281         &                     &                     &    -0.00421         \\
+            &                     &                     &    (0.0346)         &                     &                     &    (0.0307)         \\
 [1em]
-humid2      &                     &                     &      0.0385         &                     &                     &      0.0346         \\
-            &                     &                     &    (0.0379)         &                     &                     &    (0.0287)         \\
+humid2      &                     &                     &      0.0385         &                     &                     &      0.0410         \\
+            &                     &                     &    (0.0379)         &                     &                     &    (0.0365)         \\
 [1em]
-humid3      &                     &                     &      0.0335         &                     &                     &      0.0335         \\
-            &                     &                     &    (0.0328)         &                     &                     &    (0.0224)         \\
+humid3      &                     &                     &      0.0335         &                     &                     &      0.0402         \\
+            &                     &                     &    (0.0328)         &                     &                     &    (0.0276)         \\
 [1em]
-humid4      &                     &                     &      0.0437         &                     &                     &      0.0307         \\
-            &                     &                     &    (0.0304)         &                     &                     &    (0.0243)         \\
+humid4      &                     &                     &      0.0437         &                     &                     &      0.0480         \\
+            &                     &                     &    (0.0304)         &                     &                     &    (0.0242)         \\
 [1em]
-temp1       &                     &                     &      -0.355\sym{***}&                     &                     &      -0.264\sym{*}  \\
-            &                     &                     &    (0.0766)         &                     &                     &     (0.113)         \\
+temp1       &                     &                     &      -0.355\sym{***}&                     &                     &      -0.321\sym{*}  \\
+            &                     &                     &    (0.0766)         &                     &                     &     (0.116)         \\
 [1em]
-temp2       &                     &                     &     -0.0510         &                     &                     &     -0.0834\sym{*}  \\
-            &                     &                     &    (0.0444)         &                     &                     &    (0.0351)         \\
+temp2       &                     &                     &     -0.0510         &                     &                     &     -0.0555         \\
+            &                     &                     &    (0.0444)         &                     &                     &    (0.0300)         \\
 [1em]
-temp3       &                     &                     &       0.250\sym{***}&                     &                     &       0.196\sym{***}\\
-            &                     &                     &    (0.0213)         &                     &                     &    (0.0320)         \\
+temp3       &                     &                     &       0.250\sym{***}&                     &                     &       0.233\sym{***}\\
+            &                     &                     &    (0.0213)         &                     &                     &    (0.0370)         \\
 [1em]
-temp4       &                     &                     &    -0.00873         &                     &                     &     -0.0532         \\
-            &                     &                     &    (0.0356)         &                     &                     &    (0.0262)         \\
+temp4       &                     &                     &    -0.00873         &                     &                     &     -0.0571\sym{**} \\
+            &                     &                     &    (0.0356)         &                     &                     &    (0.0175)         \\
 [1em]
-temp5       &                     &                     &       0.157\sym{*}  &                     &                     &       0.128\sym{*}  \\
-            &                     &                     &    (0.0594)         &                     &                     &    (0.0496)         \\
+temp5       &                     &                     &       0.157\sym{*}  &                     &                     &       0.168\sym{**} \\
+            &                     &                     &    (0.0594)         &                     &                     &    (0.0484)         \\
 [1em]
-steplow     &                     &                     &       0.135         &                     &                     &     -0.0811         \\
-            &                     &                     &     (0.156)         &                     &                     &     (0.265)         \\
+steplow     &                     &                     &       0.135         &                     &                     &       0.141         \\
+            &                     &                     &     (0.156)         &                     &                     &     (0.200)         \\
 [1em]
-deslow      &                     &                     &       0.405         &                     &                     &      0.0688         \\
-            &                     &                     &     (0.359)         &                     &                     &     (0.396)         \\
+deslow      &                     &                     &       0.405         &                     &                     &       0.487         \\
+            &                     &                     &     (0.359)         &                     &                     &     (0.423)         \\
 [1em]
-stepmid     &                     &                     &      -2.056         &                     &                     &      -4.008\sym{*}  \\
-            &                     &                     &     (2.546)         &                     &                     &     (1.799)         \\
+stepmid     &                     &                     &      -2.056         &                     &                     &      -4.766\sym{*}  \\
+            &                     &                     &     (2.546)         &                     &                     &     (1.783)         \\
 [1em]
 desmid      &                     &                     &           0         &                     &                     &           0         \\
             &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-drystep     &                     &                     &     -0.0367         &                     &                     &     -0.0633         \\
-            &                     &                     &    (0.0851)         &                     &                     &    (0.0987)         \\
+drystep     &                     &                     &     -0.0367         &                     &                     &     -0.0689         \\
+            &                     &                     &    (0.0851)         &                     &                     &    (0.0488)         \\
 [1em]
 hiland      &                     &                     &           0         &                     &                     &           0         \\
             &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-drywint     &                     &                     &      -11.55         &                     &                     &      -27.79\sym{*}  \\
-            &                     &                     &     (15.59)         &                     &                     &     (12.82)         \\
+drywint     &                     &                     &      -11.55         &                     &                     &      -33.53         \\
+            &                     &                     &     (15.59)         &                     &                     &     (21.26)         \\
 [1em]
-goldm       &                     &                     &       0.250         &                     &                     &       0.588\sym{*}  \\
-            &                     &                     &     (0.339)         &                     &                     &     (0.276)         \\
+goldm       &                     &                     &       0.250         &                     &                     &       0.701         \\
+            &                     &                     &     (0.339)         &                     &                     &     (0.440)         \\
 [1em]
-iron        &                     &                     &      -0.178\sym{**} &                     &                     &      -0.212\sym{**} \\
-            &                     &                     &    (0.0473)         &                     &                     &    (0.0749)         \\
+iron        &                     &                     &      -0.178\sym{**} &                     &                     &      -0.248\sym{***}\\
+            &                     &                     &    (0.0473)         &                     &                     &    (0.0378)         \\
 [1em]
 silv        &                     &                     &           0         &                     &                     &           0         \\
             &                     &                     &         (.)         &                     &                     &         (.)         \\
@@ -98,38 +98,38 @@ silv        &                     &                     &           0         & 
 zinc        &                     &                     &           0         &                     &                     &           0         \\
             &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-oilres      &                     &                     &-0.000000841         &                     &                     & -0.00000127\sym{*}  \\
-            &                     &                     &(0.000000610)         &                     &                     &(0.000000473)         \\
+oilres      &                     &                     &-0.000000841         &                     &                     &-0.000000943         \\
+            &                     &                     &(0.000000610)         &                     &                     &(0.000000664)         \\
 [1em]
-legor\_fr    &                     &                     &       0.957         &                     &                     &       1.314         \\
-            &                     &                     &     (0.768)         &                     &                     &     (0.781)         \\
+legor\_fr    &                     &                     &       0.957         &                     &                     &       1.245         \\
+            &                     &                     &     (0.768)         &                     &                     &     (0.626)         \\
 [1em]
-legor\_uk    &                     &                     &       2.249\sym{**} &                     &                     &       1.985\sym{**} \\
-            &                     &                     &     (0.650)         &                     &                     &     (0.668)         \\
+legor\_uk    &                     &                     &       2.249\sym{**} &                     &                     &       2.601\sym{***}\\
+            &                     &                     &     (0.650)         &                     &                     &     (0.351)         \\
 [1em]
-2.colonizer &                     &                     &           0         &                     &                     &                     \\
-            &                     &                     &         (.)         &                     &                     &                     \\
+2.colonizer &                     &                     &           0         &                     &                     &           0         \\
+            &                     &                     &         (.)         &                     &                     &         (.)         \\
 [1em]
-3.colonizer &                     &                     &       0.932\sym{**} &                     &                     &                     \\
-            &                     &                     &     (0.301)         &                     &                     &                     \\
+3.colonizer &                     &                     &       0.932\sym{**} &                     &                     &       0.887         \\
+            &                     &                     &     (0.301)         &                     &                     &     (0.470)         \\
 [1em]
-4.colonizer &                     &                     &       1.517\sym{***}&                     &                     &                     \\
-            &                     &                     &     (0.214)         &                     &                     &                     \\
+4.colonizer &                     &                     &       1.517\sym{***}&                     &                     &       1.618\sym{**} \\
+            &                     &                     &     (0.214)         &                     &                     &     (0.368)         \\
 [1em]
-6.colonizer &                     &                     &       1.146\sym{*}  &                     &                     &                     \\
-            &                     &                     &     (0.528)         &                     &                     &                     \\
+6.colonizer &                     &                     &       1.146\sym{*}  &                     &                     &       0.677         \\
+            &                     &                     &     (0.528)         &                     &                     &     (0.672)         \\
 [1em]
-7.colonizer &                     &                     &       1.232\sym{*}  &                     &                     &                     \\
-            &                     &                     &     (0.556)         &                     &                     &                     \\
+7.colonizer &                     &                     &       1.232\sym{*}  &                     &                     &       1.081         \\
+            &                     &                     &     (0.556)         &                     &                     &     (0.708)         \\
 [1em]
-c.efw\_colonizer#c.share\_euro2&                     &                     &                     &      0.0354\sym{***}&      0.0269         &       0.138\sym{*}  \\
-            &                     &                     &                     &   (0.00394)         &    (0.0289)         &    (0.0504)         \\
+c.efw\_colonizer#c.share\_euro2&                     &                     &                     &      0.0354\sym{***}&      0.0269         &       0.178\sym{**} \\
+            &                     &                     &                     &   (0.00394)         &    (0.0289)         &    (0.0597)         \\
 [1em]
-\_cons      &       1.419         &      0.0162         &      -12.02\sym{*}  &       1.678\sym{*}  &       2.715\sym{*}  &      -6.166         \\
-            &     (0.929)         &     (1.871)         &     (4.733)         &     (0.867)         &     (1.379)         &     (4.772)         \\
+\_cons      &       1.419         &       3.213\sym{*}  &      -12.02\sym{*}  &       1.678\sym{*}  &       2.715\sym{*}  &      -15.26\sym{**} \\
+            &     (0.929)         &     (1.393)         &     (4.733)         &     (0.867)         &     (1.379)         &     (4.473)         \\
 \hline
-\(N\)       &          86         &          53         &          53         &          86         &          66         &          53         \\
-\(R^{2}\)   &       0.186         &       0.589         &       0.876         &       0.214         &       0.527         &       0.852         \\
+\(N\)       &          86         &          66         &          53         &          86         &          66         &          53         \\
+\(R^{2}\)   &       0.186         &       0.525         &       0.876         &       0.214         &       0.527         &       0.890         \\
 \hline\hline
 \multicolumn{7}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{7}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
